# aipp

./: .env  .env.example  README.md  docker-compose.traefik.yml  docker-compose.yml
.github/workflows/: deploy.yml
dashboard/: app.py
frontend/: Dockerfile  index.html  nginx.conf
frontend/assets/: aipp-bundle.js  aipp-theme.css  app2.js  bundle.js
satsgate/: .env.example  .gitignore  BETA.md  CHANGELOG.md  CONTRIBUTING.md  CUSTOMER_QUICKSTART.md  Caddyfile  Dockerfile  PUBLISHING.md  README.md  SECURITY.md  STATUS.md  SUPPORT.md  client_mock_demo.py  client_nwc_demo.mjs  client_paywall_credit_demo.mjs  client_topup_nwc.mjs  docker-compose.yml  package-lock.json  package.json  requirements.txt
satsgate/.github/workflows/: deploy.yml
satsgate/alembic/: env.py
satsgate/alembic/versions/: 1fe992244247_initial_migration.py
satsgate/app/: __init__.py  admin.py  config.py  database.py  db.py  db_admin.py  db_clients.py  db_reports.py  db_verify.py  fix_syntax.py  l402.py  main.py  main_original.py  mock_wallet.py  models.py  plans.py  rate_limit.py  refactor.py  wallet_lnaddr.py
satsgate/sdk/python/: README.md  pyproject.toml
satsgate/sdk/python/examples/fastapi_demo/: main.py
satsgate/sdk/python/examples/fastapi_reference/: README.md  main.py  payer_nwc.mjs  payer_nwc.py
satsgate/sdk/python/src/satsgate_sdk/: __init__.py  client.py
satsgate/sdk/python/src/satsgate_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
satsgate/tests/: conftest.py  test_smoke.py
