[project]
name = "satsgate-sdk"
version = "0.1.2"
description = "Python client SDK for satsgate (L402 paywall + prepaid payment verifications (credits))"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Mike-io-hash/satsgate"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
